[gd_scene load_steps=10 format=3 uid="uid://o18qlgh0vvwn"]

[ext_resource type="Script" path="res://Scenes/Game/game.gd" id="1_mtv75"]
[ext_resource type="PackedScene" uid="uid://bhroagne3v4wq" path="res://Scenes/System Map/system_map.tscn" id="2_jilbx"]
[ext_resource type="PackedScene" uid="uid://co52u63cyk220" path="res://Scenes/System 3D/system_3d.tscn" id="4_53ki8"]
[ext_resource type="PackedScene" uid="uid://chwm82adl21cm" path="res://Scenes/Sonar Interface/sonar_interface.tscn" id="4_lnw4j"]
[ext_resource type="PackedScene" uid="uid://oqkfuasvgtj6" path="res://Scenes/Barycenter Visualizer/barycenter_visualizer.tscn" id="5_wmjnw"]
[ext_resource type="PackedScene" uid="uid://dtbagvxj5to3" path="res://Scenes/Station UI/station_ui.tscn" id="6_g2s4t"]
[ext_resource type="PackedScene" uid="uid://bwlfi3x5r51fo" path="res://Scenes/Audio Visualizer/audio_visualizer.tscn" id="7_uparo"]
[ext_resource type="PackedScene" uid="uid://ckd75fjfh7urh" path="res://Data/Dialogue/dialogueManager.tscn" id="8_egtoq"]
[ext_resource type="PackedScene" uid="uid://p275r5sfhnj5" path="res://Sound/Music/musicHandler.tscn" id="9_gksgf"]

[node name="game" type="Node"]
process_mode = 1
script = ExtResource("1_mtv75")

[node name="system_window" parent="." instance=ExtResource("2_jilbx")]

[node name="system_3d_window" parent="." instance=ExtResource("4_53ki8")]

[node name="sonar_window" parent="." instance=ExtResource("4_lnw4j")]

[node name="barycenter_visualizer_window" parent="." instance=ExtResource("5_wmjnw")]

[node name="audio_visualizer_window" parent="." instance=ExtResource("7_uparo")]

[node name="station_window" parent="." instance=ExtResource("6_g2s4t")]

[node name="interaction_cooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="dialogueManager" parent="." instance=ExtResource("8_egtoq")]

[node name="musicHandler" parent="." instance=ExtResource("9_gksgf")]
